Fix(styles): Ajustando z-index do componente backtotop

--- a/frontend/src/components/Header/styles.module.scss
+++ b/frontend/src/components/Header/styles.module.scss
@@ -5,7 +5,7 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), transparent);
     display: flex;
     align-items: center;
-    z-index: 11;
+    z-index: 12;
     transition: background-color 0.3s;
 
     .brand {
