--- a/frontend/src/components/ui/BackToTop/styles.module.scss
+++ b/frontend/src/components/ui/BackToTop/styles.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9;
+    z-index: 11;
     opacity: 0;
     transition: all .4s ease;
 
